[gd_scene load_steps=5 format=2]

[ext_resource path="res://MiscRelated/VisualsRelated/KeyPressVisual/Visual_KeyPress.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameFrontHUDRelated/NonGameSubs/CurrentControlsPanel/Subs/CurrControlsSubPanel_SingleControl.gd" type="Script" id=2]
[ext_resource path="res://MiscRelated/FontRelated/Fonts/LcdSolid/LcdSolid-VPzB.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 3 )

[node name="CurrControlsSubPanel_SingleControl" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 170.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 20

[node name="ControlNameMarginer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 108.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_top = 3

[node name="ControlNameLabel" type="Label" parent="HBoxContainer/ControlNameMarginer"]
margin_top = 11.0
margin_right = 108.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "name here"
align = 1
valign = 1

[node name="Visual_KeyPress" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 1.0
margin_right = 170.0
margin_bottom = 38.0
size_flags_horizontal = 10
size_flags_vertical = 6
